apps/zigbee/endpoints.yaml
kind: Endpoints
apiVersion: v1
metadata:
  name: zigbee
  labels:
    app: zigbee
subsets:
- addresses:
  - ip: 10.4.255.252
  ports:
  - name: web
    port: 8080
    protocol: TCP
