apps/zigbee/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zigbee
  labels:
    app: zigbee
spec:
  ports:
  - name: web
    port: 80
    protocol: TCP
    targetPort: 80
